widget/gtk/nsPrintSettingsGTK.cpp
@@ -200,17 +200,44 @@ nsPrintSettingsGTK::SetGtkPrinter(GtkPrinter *aPrinter)
     g_object_unref(mGTKPrinter);
 
   mGTKPrinter = (GtkPrinter*) g_object_ref(aPrinter);
+}
 
-  // Prior to gtk 2.24, gtk_printer_accepts_pdf() and
-  // gtk_printer_accepts_ps() always returned true regardless of the
-  // printer's capability.
-  bool shouldTrustGTK =
-    (gtk_major_version > 2 ||
-     (gtk_major_version == 2 && gtk_minor_version >= 24));
-  bool acceptsPDF = shouldTrustGTK && gtk_printer_accepts_pdf(mGTKPrinter);
+NS_IMETHODIMP nsPrintSettingsGTK::GetOutputFormat(int16_t *aOutputFormat)
+{
+  NS_ENSURE_ARG_POINTER(aOutputFormat);
 
-  SetOutputFormat(acceptsPDF ? nsIPrintSettings::kOutputFormatPDF
-                             : nsIPrintSettings::kOutputFormatPS);
+  int16_t format;
+  nsresult rv = nsPrintSettings::GetOutputFormat(&format);
+  if (NS_FAILED(rv)) {
+    return rv;
+  }
+
+  if (format == nsIPrintSettings::kOutputFormatNative) {
+    const gchar* fmtGTK =
+      gtk_print_settings_get(mPrintSettings,
+                             GTK_PRINT_SETTINGS_OUTPUT_FILE_FORMAT);
+    if (fmtGTK) {
+      if (nsDependentCString(fmtGTK).EqualsIgnoreCase("pdf")) {
+        format = nsIPrintSettings::kOutputFormatPDF;
+      } else {
+        format = nsIPrintSettings::kOutputFormatPS;
+      }
+    } else if (GTK_IS_PRINTER(mGTKPrinter)) {
+      // Prior to gtk 2.24, gtk_printer_accepts_pdf() and
+      // gtk_printer_accepts_ps() always returned true regardless of the
+      // printer's capability.
+      bool shouldTrustGTK =
+        (gtk_major_version > 2 ||
+         (gtk_major_version == 2 && gtk_minor_version >= 24));
+      bool acceptsPDF = shouldTrustGTK && gtk_printer_accepts_pdf(mGTKPrinter);
+
+      format = acceptsPDF ? nsIPrintSettings::kOutputFormatPDF
+                          : nsIPrintSettings::kOutputFormatPS;
+    }
+  }
+
+  *aOutputFormat = format;
+  return NS_OK;
 }
 
 /**
